trying to fix squashed images

--- a/_sass/_img-popup.scss
+++ b/_sass/_img-popup.scss
@@ -6,7 +6,8 @@
 
   img {
     cursor: pointer;
-    width: 100%;
+    width: auto;
+    height: 100%;
   }
 }
 
